feat: add styles to sign-in-block and newsletter-block

--- a/index.html
+++ b/index.html
@@ -190,7 +190,14 @@
                 </div>
                 <!--join the newsletter-->
                 <div class="row">
-                    <div class="newsletter-block"></div>
+                    <div class="newsletter-block">
+                        <h3 class="newsletter-block__title">Join the Newsletter</h3>
+                        <p class="newsletter-block__text">Sign up for our personalized daily newsletter</p>
+                        <form class="newsletter-block__form" action="/echo" method="get">
+                            <input class="newsletter-block__input" type="email" placeholder="Enter email address">
+                            <button class="newsletter-block__btn" type="submit">Sign up</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
