feat: Add style to main-menu block

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <a href="#" class="burger-btn"></a>
         <nav class="main-nav">
             <ul class="main-nav__list">
-                <li class="main-nav__item"><a href="" class="main-nav__link">Home</a></li>
-                <li class="main-nav__item"><a href="" class="main-nav__link">Store</a></li>
-                <li class="main-nav__item"><a href="" class="main-nav__link">Blog</a></li>
-                <li class="main-nav__item"><a href="" class="main-nav__link">About</a></li>
-                <li class="main-nav__item"><a href="" class="main-nav__link">Contact</a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__link">Home</a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__link">Store</a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__link">Blog</a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__link">About</a></li>
+                <li class="main-nav__item"><a href="#" class="main-nav__link">Contact</a></li>
             </ul>
         </nav>
         <div class="user-block">
@@ -63,7 +63,178 @@
         <div class="row">
             <div class="column column_2">
                 <!--Menu, submenu, contacts--->
-                <div class="main-menu"></div>
+                <nav class="main-menu">
+                    <div class="main-menu__column">
+                        <ul class="main-menu__list">
+                            <li class="main-menu__item" id="main-menu__home">
+                                <a href="#" class="main-menu__link">
+                                    <span class="main-menu__icon">
+                                        <svg class="icon icon_home">
+                                           <use xlink:href="img/sprite.svg#home-icon"></use>
+                                        </svg>
+                                    </span>
+                                    Home</a>
+                            </li>
+                            <li class="main-menu__item" id="main-menu__store">
+                                <a href="#" class="main-menu__link">
+                                    <span class="main-menu__icon">
+                                        <svg class="icon icon_shop">
+                                           <use xlink:href="img/sprite.svg#shop-icon"></use>
+                                        </svg>
+                                    </span>
+                                    Store</a>
+                            </li>
+                            <li class="main-menu__item" id="main-menu__blog">
+                                <a href="#" class="main-menu__link">
+                                    <span class="main-menu__icon">
+                                        <svg class="icon icon_note">
+                                           <use xlink:href="img/sprite.svg#note-icon"></use>
+                                        </svg>
+                                    </span>
+                                    Blog</a>
+                            </li>
+                            <li class="main-menu__item" id="main-menu__community">
+                                <a href="#" class="main-menu__link">
+                                    <span class="main-menu__icon">
+                                        <svg class="icon icon_users">
+                                           <use xlink:href="img/sprite.svg#users-icon"></use>
+                                        </svg>
+                                    </span>
+                                    Community</a>
+                            </li>
+                            <li class="main-menu__item" id="main-menu__contests">
+                                <a href="#" class="main-menu__link">
+                                    <span class="main-menu__icon">
+                                        <svg class="icon icon_trophy">
+                                           <use xlink:href="img/sprite.svg#trophy-icon"></use>
+                                        </svg>
+                                    </span>
+                                    Contests</a>
+                            </li>
+                            <li class="main-menu__item" id="main-menu__about">
+                                <a href="#" class="main-menu__link">
+                                    <span class="main-menu__icon">
+                                        <svg class="icon icon_info">
+                                           <use xlink:href="img/sprite.svg#info-icon"></use>
+                                        </svg>
+                                    </span>
+                                    About</a>
+                            </li>
+                            <li class="main-menu__item" id="main-menu__contact">
+                                <a href="#" class="main-menu__link">
+                                    <span class="main-menu__icon">
+                                        <svg class="icon icon_email">
+                                           <use xlink:href="img/sprite.svg#email-icon"></use>
+                                        </svg>
+                                    </span>
+                                    Contact</a>
+                                </li>
+                        </ul>
+                        <div class="main-menu__contacts">
+                            <div class="contacts">
+                                <div class="contacts__item">
+                                    <span class="contacts__icon">
+                                        <svg class="icon icon_phone">
+                                           <use xlink:href="img/sprite.svg#phone-icon"></use>
+                                        </svg>
+                                    </span>
+                                    <p class="contacts__text">
+                                        <a class="contacts__link" href="tel:9125551234">(912) 555-1234</a>
+                                        <a class="contacts__link" href="tel:9125555678">(912) 555-5678</a>
+                                    </p>
+                                </div>
+                                <div class="contacts__item">
+                                    <span class="contacts__icon">
+                                        <svg class="icon icon_pointer">
+                                           <use xlink:href="img/sprite.svg#pointer-icon"></use>
+                                        </svg>
+                                    </span>
+                                    <p class="contacts__text">
+                                        1600 Pennsylvania<br>
+                                        Ave NW, Washington<br>
+                                        DC 20500, USA
+                                    </p>
+                                </div>
+                                <div class="contacts__item">
+                                    <span class="contacts__icon">
+                                        <svg class="icon icon_email">
+                                           <use xlink:href="img/sprite.svg#email-icon"></use>
+                                        </svg>
+                                    </span>
+                                    <p class="contacts__text">
+                                        <a class="contacts__link" href="mailto:hello@website.com">hello@website.com</a>
+                                        <a class="contacts__link" href="mailto:office@website.com">office@website.com</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main-menu__submenu">
+                        <ul class="submenu submenu_1" id="submenu__blog">
+                            <li class="submenu__item submenu__item_1">
+                                <a href="" class="submenu__link submenu__link_1">
+                                    <span>Tech</span>
+                                    <span class="submenu__icon">
+                                        <svg class="icon icon_arrow">
+                                           <use xlink:href="img/sprite.svg#arrow-icon"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                                <ul class="submenu submenu_2">
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Software &amp; Apps</a></li>
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Gadgets</a></li>
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Mobile</a></li>
+                                </ul>
+                            </li>
+                            <li class="submenu__item submenu__item_1">
+                                <a href="" class="submenu__link submenu__link_1">
+                                    <span>Entertainment</span>
+                                    <span class="submenu__icon">
+                                        <svg class="icon icon_arrow">
+                                           <use xlink:href="img/sprite.svg#arrow-icon"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                                <ul class="submenu submenu_2">
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Film</a></li>
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Gaming</a></li>
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Music</a></li>
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Sport</a></li>
+                                </ul>
+                            </li>
+                            <li class="submenu__item submenu__item_1">
+                                <a href="" class="submenu__link submenu__link_1">
+                                    <span>Business</span>
+                                    <span class="submenu__icon">
+                                        <svg class="icon icon_arrow">
+                                           <use xlink:href="img/sprite.svg#arrow-icon"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                                <ul class="submenu submenu_2">
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Jobs</a></li>
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Marketing</a></li>
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Media</a></li>
+                                </ul>
+                            </li>
+                            <li class="submenu__item submenu__item_1">
+                                <a href="" class="submenu__link submenu__link_1">
+                                    <span>Lifestyle</span>
+                                    <span class="submenu__icon">
+                                        <svg class="icon icon_arrow">
+                                           <use xlink:href="img/sprite.svg#arrow-icon"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                                <ul class="submenu submenu_2">
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Home</a></li>
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Health &amp; Fitness</a></li>
+                                    <li class="submenu__item submenu__item_2"><a href="#" class="submenu__link submenu__link_2">Travel &amp; Leisure</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
             <div class="column column_2">
                 <div class="row">
