feat: add styles to slider-block

--- a/index.html
+++ b/index.html
@@ -373,7 +373,44 @@
             </div>
         </div>
         <div class="row">
-            <div class="slider-block"></div>
+            <div class="slider-block">
+                <input type="radio" class="slide-block__radio" id="slide-block-radio-1" name="slider" checked>
+                <input type="radio" class="slide-block__radio" id="slide-block-radio-2" name="slider">
+                <input type="radio" class="slide-block__radio" id="slide-block-radio-3" name="slider">
+                <input type="radio" class="slide-block__radio" id="slide-block-radio-4" name="slider">
+                <div class="slider-block__list">
+                    <div class="slider-block__slide">
+                        <h2 class="slider-block__title">Featured Story</h2>
+                        <p class="slide-block__text">Now that the holiday gift-giving time is over, we`re sure many of our readers unwrapped some new consoles. Despite its long life on the market...</p>
+                        <a href="#" class="slide-block__btn">view more</a>
+                    </div>
+                    <div class="slider-block__slide">
+                        <h2 class="slider-block__title">Featured Story</h2>
+                        <p class="slide-block__text">Now that the holiday gift-giving time is over, we`re sure many of our readers unwrapped some new consoles. Despite its long life on the market...</p>
+                        <a href="" class="slide-block__btn">view more</a>
+                    </div>
+                    <div class="slider-block__slide">
+                        <h2 class="slider-block__title">Featured Story</h2>
+                        <p class="slide-block__text">Now that the holiday gift-giving time is over, we`re sure many of our readers unwrapped some new consoles. Despite its long life on the market...</p>
+                        <a href="" class="slide-block__btn">view more</a>
+                    </div>
+                    <div class="slider-block__slide">
+                        <h2 class="slider-block__title">Featured Story</h2>
+                        <p class="slide-block__text">Now that the holiday gift-giving time is over, we`re sure many of our readers unwrapped some new consoles. Despite its long life on the market...</p>
+                        <a href="" class="slide-block__btn">view more</a>
+                    </div>
+                </div>
+                <div class="slider-block__toggles">
+                    <label for="slide-block-radio-1" class="slider-block__toggle"></label>
+                    <label for="slide-block-radio-2" class="slider-block__toggle"></label>
+                    <label for="slide-block-radio-3" class="slider-block__toggle"></label>
+                    <label for="slide-block-radio-4" class="slider-block__toggle"></label>
+                </div>
+                <div class="slider-block__arrows">
+                    <div class="slider-block__arrow slider-block__arrow_left" id="slider-block-arrow-left"></div>
+                    <div class="slider-block__arrow slider-block__arrow_right" id="slider-block-arrow-right"></div>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="post post_big"></div>
