feat: add styles to calendar block

--- a/index.html
+++ b/index.html
@@ -608,7 +608,50 @@
                 <div class="row">
                     <div class="column column_3">
                         <div class="row">
-                            <div class="calendar-block"></div>
+                            <div class="calendar-block">
+                                <div class="calendar-block__header">
+                                    <a href="#" class="calendar-block__previous">Oct</a>
+                                    <div class="calendar-block__month">November</div>
+                                    <a href="#" class="calendar-block__next">Dec</a>
+                                </div>
+                                <div class="calendar-block__list">
+                                    <div class="calendar-block__item"></div>
+                                    <div class="calendar-block__item"></div>
+                                    <div class="calendar-block__item"></div>
+                                    <div class="calendar-block__item"></div>
+                                    <div class="calendar-block__item calendar-block__item_day">1</div>
+                                    <div class="calendar-block__item calendar-block__item_day">2</div>
+                                    <div class="calendar-block__item calendar-block__item_day">3</div>
+                                    <div class="calendar-block__item calendar-block__item_day">4</div>
+                                    <div class="calendar-block__item calendar-block__item_day">5</div>
+                                    <div class="calendar-block__item calendar-block__item_day">6</div>
+                                    <div class="calendar-block__item calendar-block__item_day">7</div>
+                                    <div class="calendar-block__item calendar-block__item_day">8</div>
+                                    <div class="calendar-block__item calendar-block__item_day">9</div>
+                                    <div class="calendar-block__item calendar-block__item_day">10</div>
+                                    <div class="calendar-block__item calendar-block__item_day">11</div>
+                                    <div class="calendar-block__item calendar-block__item_day">12</div>
+                                    <div class="calendar-block__item calendar-block__item_day">13</div>
+                                    <div class="calendar-block__item calendar-block__item_day calendar-block__item_current">14</div>
+                                    <div class="calendar-block__item calendar-block__item_day">15</div>
+                                    <div class="calendar-block__item calendar-block__item_day">16</div>
+                                    <div class="calendar-block__item calendar-block__item_day">17</div>
+                                    <div class="calendar-block__item calendar-block__item_day">18</div>
+                                    <div class="calendar-block__item calendar-block__item_day">19</div>
+                                    <div class="calendar-block__item calendar-block__item_day">20</div>
+                                    <div class="calendar-block__item calendar-block__item_day">21</div>
+                                    <div class="calendar-block__item calendar-block__item_day">22</div>
+                                    <div class="calendar-block__item calendar-block__item_day">23</div>
+                                    <div class="calendar-block__item calendar-block__item_day">24</div>
+                                    <div class="calendar-block__item calendar-block__item_day">25</div>
+                                    <div class="calendar-block__item calendar-block__item_day">26</div>
+                                    <div class="calendar-block__item calendar-block__item_day">27</div>
+                                    <div class="calendar-block__item calendar-block__item_day">28</div>
+                                    <div class="calendar-block__item calendar-block__item_day">29</div>
+                                    <div class="calendar-block__item calendar-block__item_day">30</div>
+                                    <div class="calendar-block__item"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="column column_3">
