feat: add styles to quote block

--- a/index.html
+++ b/index.html
@@ -656,7 +656,16 @@
                     </div>
                     <div class="column column_3">
                         <div class="row">
-                            <div class="view-stories-block"></div>
+                            <div class="view-stories-block">
+                                <a href="#" class="view-stories-block__link">
+                                    <span class="view-stories-block__text">View more stories</span>
+                                    <span class="view-stories-block__icon">
+                                        <svg class="icon icon_arrow_big">
+                                           <use xlink:href="img/sprite.svg#arrow-icon"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -665,7 +674,14 @@
                     <div class="post post_large"></div>
                 </div>
                 <div class="row">
-                    <div class="quote-block"></div>
+                    <div class="quote-block">
+                        <span class="quote-block__icon">
+                            <svg class="icon icon_quote">
+                               <use xlink:href="img/sprite.svg#quote-icon"></use>
+                            </svg>
+                        </span>
+                        <q class="quote-block__item">If you don`t like something change it.<br>If you can`t change it, change the way you think about it</q>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="tabs-block"></div>
